Fix #88 - long names in tooltip wrap, ellipsis in team list

--- a/src/app/components/users/user.component.scss
+++ b/src/app/components/users/user.component.scss
@@ -6,7 +6,9 @@
     white-space: nowrap;
 
     ion-label {
-      overflow: initial;
+      overflow: hidden;
+      max-width: 180px;
+      text-overflow: ellipsis;
     }
 
     &.avatar-only {
